Added basic tasks for gulp to build frontend resources and invoke basic frontend server. Updated backend .gitignore to not include static/ files

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body ng-app="MagWebApp">
 <div ng-controller="MainController as vm">
-    <h1>Hello World! {{vm.test}}</h1>
+    <h1>Hello World! {{vm.tests}}</h1>
 </div>
 <script src="app.js"></script>
 </body>
