--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="utf-8">
     <title>Badanie dostępu do danych</title>
-    <meta name="author" content="imralav">
+    <meta name="author" content="Tomasz Karczewski">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body ng-app="MagWebApp">
-<div ng-controller="MainController as vm">
-    <h1>Hello World! {{vm.tests}}</h1>
+<body data-ng-app="magwebapp" class="magwebapp">
+<div class="container-fluid">
+    <div ng-view></div>
 </div>
-<script src="app.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/angular.min.js"></script>
+<script src="js/angular-route.min.js"></script>
+<script src="js/angular-translate.min.js"></script>
+<script src="js/angular-translate-loader-static-files.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/app.js"></script>
+<script src="js/templates.js"></script>
 </body>
 </html>
