--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -13,12 +13,16 @@
 </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/angular.min.js"></script>
+<script src="js/angular-animate.min.js"></script>
 <script src="js/angular-route.min.js"></script>
 <script src="js/angular-translate.min.js"></script>
 <script src="js/angular-translate-loader-static-files.min.js"></script>
 <script src="js/ng-file-upload-shim.min.js"></script> <!-- for no html5 browsers support -->
 <script src="js/ng-file-upload.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/ui-bootstrap.min.js"></script>
+<script src="js/ui-bootstrap-tpls.min.js"></script>
+<!--<script src="js/CameraPreview.js"></script>-->
 <script src="js/app.js"></script>
 <script src="js/templates.js"></script>
 </body>
