--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -11,6 +11,7 @@
 <div class="container-fluid">
     <div ng-view></div>
 </div>
+<script src="js/adapter.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/angular.min.js"></script>
 <script src="js/angular-animate.min.js"></script>
@@ -22,7 +23,6 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/ui-bootstrap.min.js"></script>
 <script src="js/ui-bootstrap-tpls.min.js"></script>
-<!--<script src="js/CameraPreview.js"></script>-->
 <script src="js/app.js"></script>
 <script src="js/templates.js"></script>
 </body>
